--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -45,7 +45,7 @@ form textarea {
 .button {
     width: 100%;
     height: 60px;
-    background: #e02041;
+    background: #FF6E00;
     border: 0;
     border-radius: 8px;
     color: #ffff;
