--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -15,6 +15,10 @@
     margin-right: 30px;
 }
 
+.invisible {
+    display: none;
+}
+
 .logon-container section.form form{
     margin-top: 100px;
 }
